# strict_decimal

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  stack.rs
